<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llLivesSkips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="@dimen/vroom_labels_bottom_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lives"
                    android:textSize="@dimen/vroom_normal_text_size"/>

                <TextView
                    android:id="@+id/tvLivesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/vroom_normal_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skips"
                    android:textSize="@dimen/vroom_normal_text_size"/>

                <TextView
                    android:id="@+id/tvSkipsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/vroom_normal_text_size"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highScore"
                    android:textSize="@dimen/vroom_normal_text_size"/>

                <TextView
                    android:id="@+id/tvHighScoreValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/vroom_normal_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourScore"
                    android:textSize="@dimen/vroom_normal_text_size"/>

                <TextView
                    android:id="@+id/tvYourScoreValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/vroom_normal_text_size"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/llLivesSkips"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/vroom_round_bottom_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round"
                android:textColor="#33B5E5"
                android:textSize="@dimen/vroom_round_number_text_size" />

            <TextView
                android:id="@+id/tvRoundValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#33B5E5"
                android:textSize="@dimen/vroom_round_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSeekerBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llRounds"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/vroom_seekbar_bottom_margin">

            <TextView
                android:id="@+id/tvProgressTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="00:00"
                android:textSize="@dimen/vroom_normal_text_size"/>

            <SeekBar
                android:id="@+id/sbExhaustSound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/tvDurationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="00:00"
                android:textSize="@dimen/vroom_normal_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMediaControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSeekerBar"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/vroom_media_buttons_top_margin"
            android:layout_marginBottom="@dimen/vroom_media_buttons_bottom_margin">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/vroom_media_buttons_right_margin"
                android:layout_marginEnd="@dimen/vroom_media_buttons_right_margin">

                <Button
                    android:id="@+id/bPlay"
                    android:layout_width="@dimen/vroom_media_button_width"
                    android:layout_height="@dimen/vroom_media_button_height"
                    android:background="@drawable/play" />

                <Button
                    android:id="@+id/bPause"
                    android:layout_width="@dimen/vroom_media_button_width"
                    android:layout_height="@dimen/vroom_media_button_height"
                    android:background="@drawable/pause"
                    android:visibility="gone" />
            </FrameLayout>

            <Button
                android:id="@+id/bStop"
                android:layout_width="@dimen/vroom_media_button_width"
                android:layout_height="@dimen/vroom_media_button_height"
                android:background="@drawable/stop"
                android:layout_marginRight="@dimen/vroom_media_buttons_right_margin"
                android:layout_marginEnd="@dimen/vroom_media_buttons_right_margin"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bRepeat"
                    android:layout_width="@dimen/vroom_media_button_width"
                    android:layout_height="@dimen/vroom_media_button_height"
                    android:background="@drawable/repeat"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bRepeatNegate"
                    android:layout_width="@dimen/vroom_media_button_width"
                    android:layout_height="@dimen/vroom_media_button_height"
                    android:background="@drawable/repeatnegate" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llMediaControls"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/vroom_bottom_section_top_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llrgCars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/vroom_radio_group_bottom_margin">

                <RadioGroup
                    android:id="@+id/rgCars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbCar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vroom_radio_button_bottom_margin"
                        android:text="2014 Lamborghini Aventador LP720-4 50° Anniv."
                        android:textSize="@dimen/vroom_radio_button_text_size"
                        android:singleLine="true"/>

                    <RadioButton
                        android:id="@+id/rbCar2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vroom_radio_button_bottom_margin"
                        android:text="1992 Honda NSX"
                        android:textSize="@dimen/vroom_radio_button_text_size"
                        android:singleLine="true"/>

                    <RadioButton
                        android:id="@+id/rbCar3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vroom_radio_button_bottom_margin"
                        android:text="2014 Mercedes-Benz E63 AMG S"
                        android:textSize="@dimen/vroom_radio_button_text_size"
                        android:singleLine="true"/>

                    <RadioButton
                        android:id="@+id/rbCar4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vroom_radio_button_bottom_margin"
                        android:text="2014 Lamborghini Aventador LP720-4 50° Anniv."
                        android:textSize="@dimen/vroom_radio_button_text_size"
                        android:singleLine="true"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSkipConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vroom_skip_confirm_top_margin"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bSkip"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/bSkip"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/vroom_button_text_size"/>

                <View
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/bConfirm"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/bConfirm"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/vroom_button_text_size"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    
</RelativeLayout>